tests/neg-custom-args/captures/i23303.check
-- Error: tests/neg-custom-args/captures/i23303.scala:5:36 -------------------------------------------------------------
5 |    def execute: Unit = ops.foreach(f => f()) // error
  |                                    ^^^^^^^^
  |                                    Local any in the type of value ops leaks into capture scope of class Runner.
  |                                    You could try to abstract the capability in a capset variable.
-- Error: tests/neg-custom-args/captures/i23303.scala:8:22 -------------------------------------------------------------
8 |    () => ops.foreach(f => f()) // error
  |                      ^^^^^^^^
  |                      Local any in the type of parameter ops leaks into capture scope of method Runner2.
  |                      You could try to abstract the capability in a capset variable.
